Archive2/39/0342c4ab7dec5c/output
main.cpp: In member function 'void B::access(N::A&)':
main.cpp:8:11: error: 'int N::A::_data' is private
       int _data;
           ^
main.cpp:14:7: error: within this context
     x._data = 1; // error: private
       ^
