Archive2/39/0342c4ab7dec5c/main.cpp
namespace N { 
  struct A { 
    friend struct B;

    void func (); 

    private:
      int _data;
  };  
}

struct B { 
  void access (N::A& x) {
    x._data = 1; // error: private
  }
};

namespace N { 
  void A::func () {
    B x; x.access (*this);
  }
}

int main () {
  // ...
}